# wx250s_simulation

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  robot.py  setup.py  test_robot.ipynb  test_robot.m  wx250s.m
wx250s_simulation/: __init__.py  robot.py
wx250s_simulation/assets/: wx250s.urdf
